Fixed misaligned product images in some views, added login screenshot to readme

--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -556,6 +556,8 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+  /* Added to centre photos */
+  margin:auto;
 }
 .product > div {
   display: flex;
